# pyaqi

./: README.md  pyproject.toml
pyaqi/: __init__.py  aqi_references.py
