[tool.poetry]
name = "pyaqi"
version = "0.1.0"
description = "Módulo para cálculo do Índice de Qualidade do Ar (IQAr)."
authors = ["Fernanda Scovino <fscovinom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
